# Proiect-Final-Nenos-Academy

./: Dockerfile  README.md  api.py  cerinta.txt  docker-compose.yaml  main.py  proj.data.recorded_situations.json  pyproject.toml
data/: database.py  record.json  recorded_situations.json
models/: basemodel.py  crew.py  departure.py  module.py
src/: api.py  database.py  main.py  proj.data.recorded_situations.json
src/models/: basemodel.py  crew.py  cycle.py
tests/: test_date.py  test_main.py
